import Foundation

enum Identifiers {
    static let singleImageAlertErrorLoadImage = "SingeImageView_error_loadImage"
    static let singleImageButtonReturn = "SingleImageView_button_return"

    static let imagesCellFavoriteButton = "ImagesListCell_button_like"
    static let imagesCellFavoriteActive = "favoritesActive"
    static let imagesCellFavoriteNoActive = "favoritesNoActive"

    static let profileButtonLogout = "ProfileView_button_logout"
    static let profileAlertConfirmLogout = "ProfileView_confirm_logout"

    static let authButtonLogin = "AuthView_button_login"
}
